--- a/01.basics/webpack-practices/ex04/package.json
+++ b/01.basics/webpack-practices/ex04/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "ex04",
+  "name": "ex02",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node dev-server.mjs",
+    "start": "npx webpack serve --progress",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx webpack ./src/index.js -o ./public"
+    "build": "npx webpack"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "express": "^4.17.1",
+    "css-loader": "^6.5.1",
+    "style-loader": "^3.3.1",
     "webpack": "^5.64.2",
-    "webpack-cli": "^4.9.1"
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.5.0"
   }
 }
