--- a/01.basics/ex01/package.json
+++ b/01.basics/ex01/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ex01",
   "version": "1.0.0",
-  "description": "",
+  "description": "ex01: 전통적인 DOM API 기반의 애플리케이션",
   "type": "module",
   "main": "index.js",
   "scripts": {
@@ -13,5 +13,55 @@
   "license": "ISC",
   "devDependencies": {
     "express": "^4.17.1"
+  },
+  "dependencies": {
+    "bytes": "^3.1.0",
+    "accepts": "^1.3.7",
+    "body-parser": "^1.19.0",
+    "array-flatten": "^1.1.1",
+    "content-disposition": "^0.5.3",
+    "cookie-signature": "^1.0.6",
+    "content-type": "^1.0.4",
+    "debug": "^2.6.9",
+    "cookie": "^0.4.0",
+    "ee-first": "^1.1.1",
+    "escape-html": "^1.0.3",
+    "destroy": "^1.0.4",
+    "depd": "^1.1.2",
+    "encodeurl": "^1.0.2",
+    "etag": "^1.8.1",
+    "finalhandler": "^1.1.2",
+    "fresh": "^0.5.2",
+    "forwarded": "^0.2.0",
+    "iconv-lite": "^0.4.24",
+    "http-errors": "^1.7.2",
+    "inherits": "^2.0.3",
+    "ipaddr.js": "^1.9.1",
+    "media-typer": "^0.3.0",
+    "methods": "^1.1.2",
+    "mime": "^1.6.0",
+    "merge-descriptors": "^1.0.1",
+    "mime-db": "^1.51.0",
+    "ms": "^2.0.0",
+    "mime-types": "^2.1.34",
+    "negotiator": "^0.6.2",
+    "on-finished": "^2.3.0",
+    "parseurl": "^1.3.3",
+    "proxy-addr": "^2.0.7",
+    "path-to-regexp": "^0.1.7",
+    "qs": "^6.7.0",
+    "range-parser": "^1.2.1",
+    "safer-buffer": "^2.1.2",
+    "raw-body": "^2.4.0",
+    "send": "^0.17.1",
+    "safe-buffer": "^5.1.2",
+    "serve-static": "^1.14.1",
+    "setprototypeof": "^1.1.1",
+    "statuses": "^1.5.0",
+    "type-is": "^1.6.18",
+    "toidentifier": "^1.0.0",
+    "utils-merge": "^1.0.1",
+    "unpipe": "^1.0.0",
+    "vary": "^1.1.2"
   }
 }
