--- a/01.basics/ex07/package.json
+++ b/01.basics/ex07/package.json
@@ -4,7 +4,7 @@
   "description": "ex06: React(JSX 기반) 애플리케이션으로 리팩토링\r 설치:\r $ npm i -D webpack webpack-cli webpack-dev-server babel-loader style-loader css-loader sass-loader node-sass @babel/core @babel/cli @babel/preset-env @babel/preset-react\r $ npm i react react-dom",
   "main": "index.js",
   "scripts": {
-    "start": "npx webpack serve --progress --mode development",
+    "start": "npx webpack serve --progress ",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx webpack"
   },
