--- a/guestbook/package.json
+++ b/guestbook/package.json
@@ -4,7 +4,7 @@
   "description": "ex08: JSX Tutorials",
   "main": "index.js",
   "scripts": {
-    "debug": "npx webpack serve --config config/webpack.config.js --progress --mode development --env" 
+    "debug": "npx webpack serve --config config/webpack.config.js --progress --mode development"
   },
   "keywords": [],
   "author": "",
@@ -19,9 +19,9 @@
     "node-sass": "^6.0.1",
     "sass-loader": "^12.3.0",
     "style-loader": "^3.3.1",
-    "webpack": "^5.64.4",
+    "webpack": "^5.64.2",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.6.0"
+    "webpack-dev-server": "^4.5.0"
   },
   "dependencies": {
     "prop-types": "^15.7.2",
