--- a/Emaillist/package.json
+++ b/Emaillist/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "guestbook",
+  "name": "emaillist",
   "version": "1.0.0",
   "description": "ex08: JSX Tutorials",
   "main": "index.js",
