--- a/guestbook/package.json
+++ b/guestbook/package.json
@@ -1,31 +1,48 @@
 {
   "name": "guestbook",
   "version": "1.0.0",
-  "description": "ex08: JSX Tutorials",
-  "main": "index.js",
+  "description": "",
+  "main": "",
   "scripts": {
-    "debug": "npx webpack serve --config config/webpack.config.js --progress --mode development"
+    "debug": "npx webpack serve --config config/webpack.config.js --progress --mode development",
+    "dev": "webpack serve --config config/webpack.config.js --mode development --progress",
+    "build": "webpack --config config/webpack.config.js --mode production --progress"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/cli": "^7.16.0",
-    "@babel/core": "^7.16.0",
-    "@babel/preset-env": "^7.16.4",
-    "@babel/preset-react": "^7.16.0",
-    "babel-loader": "^8.2.3",
-    "css-loader": "^6.5.1",
+    "@babel/core": "^7.14.8",
+    "@babel/plugin-syntax-throw-expressions": "^7.14.5",
+    "@babel/plugin-transform-runtime": "^7.15.0",
+    "@babel/preset-env": "^7.14.8",
+    "@babel/preset-react": "^7.14.5",
+    "babel-loader": "^8.2.2",
+    "concurrently": "^6.2.0",
+    "cross-env": "^7.0.3",
+    "css-loader": "^6.2.0",
     "node-sass": "^6.0.1",
-    "sass-loader": "^12.3.0",
-    "style-loader": "^3.3.1",
-    "webpack": "^5.64.2",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.5.0"
+    "nodemon": "^2.0.12",
+    "prop-types": "^15.7.2",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^3.2.1",
+    "webpack": "^5.46.0",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "prop-types": "^15.7.2",
+    "dotenv": "^10.0.0",
+    "ejs": "^3.1.6",
+    "express": "^4.17.1",
+    "express-session": "^1.17.2",
+    "minimist": "^1.2.5",
+    "mysql2": "^2.2.5",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-addons-update": "^15.6.3",
+    "react-dom": "^17.0.2",
+    "react-modal": "^3.14.3",
+    "sequelize": "^6.6.5",
+    "winston": "^3.3.3",
+    "winston-daily-rotate-file": "^4.5.5"
   }
 }
