--- a/Emaillist/package.json
+++ b/Emaillist/package.json
@@ -3,19 +3,16 @@
   "version": "1.0.0",
   "description": "",
   "main": "",
-  "scripts": {    
+  "scripts": {
     "start": "cross-env NODE_ENV=production nohup node backend/index.js --name $npm_package_name > /dev/null 2>&1 &",
     "restart": "npm stop && npm start",
     "stop": "pkill $npm_package_name",
     "prestart": "npm run build",
     "postinstall": "npm run build",
-        
     "build": "npm run build:frontend && npm run build:backend",
     "build:backend": "echo \"no build specified\"",
     "build:frontend": "cross-env NODE_ENV=production webpack --config frontend/config/webpack.config.js --mode production --progress",
-
     "test": "echo \"no test specified\"",
-
     "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\" --kill-others",
     "dev:backend": "cross-env NODE_ENV=development nodemon backend/index.js -e js,mjs,json,env --watch backend --name $npm_package_name",
     "dev:frontend": "cross-env NODE_ENV=development webpack serve --config frontend/config/webpack.config.js --mode development --progress"
@@ -48,6 +45,7 @@
     "express-session": "^1.17.2",
     "minimist": "^1.2.5",
     "mysql2": "^2.2.5",
+    "process": "^0.11.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "winston": "^3.3.3",
